--- a/README.mkd
+++ b/README.mkd
@@ -11,7 +11,11 @@ Clone the repo:
 ```
 git clone git@github.com:BIG-Tools/BigBrowser
 ```
-
+### Build from IDE
+* Download Qt SDK from http://www.qt.io/download/
+* Open project.pro
+* Compile & run 
+```
 ### Build without IDE
 
 ```
